third_party/move/move-compiler-v2/tests/checking/specs/update_field_err.exp

Diagnostics:
error: field `z` not declared in struct `R`
   ┌─ tests/checking/specs/update_field_err.move:16:9
   │
16 │         update_field(r, z, 1)
   │         ^^^^^^^^^^^^^^^^^^^^^

error: expected `u64` but found a value of type `bool`
   ┌─ tests/checking/specs/update_field_err.move:20:28
   │
20 │         update_field(r, x, true)
   │                            ^^^^
